# multicast-test

./: .gitignore
receiver/: CMakeLists.txt  main.cpp
sender/: CMakeLists.txt  main.cpp
